--- a/source/template.html
+++ b/source/template.html
@@ -44,6 +44,11 @@
       <div class="slider"></div>
     </div>
 
+    <div>
+        <button id="button1" type="button" onclick="button1Click()">I don't Know</button>
+        <button id="button2" type="button" onclick="button2Click()">No response</button>
+    </div>
+
     <!-- use this if you want to display the changing value of the slider on the screen - check the script.js too-->
     <div class="label default-question-text-size">
       <p id="slider-value"></p>
